<resources>
    <string name="app_name">Salon</string>
    <string name="skip">Skip</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="promotion">Promotion</string>
    <string name="favorit">Favorite</string>
    <string name="notication">Notification</string>
    <string name="explore">Explore</string>
    <string name="reservation">Reservation</string>
    <string name="title_activity_home_drawer">HomeActivityDrawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="edit_profile">EDIT PROFIL</string>
    <string name="prices">Prices</string>
    <string name="sercices">Services</string>
    <string name="facebook_app_id">1844260792510465</string>
    <string name="fb_login_protocol_scheme">fb1844260792510465</string>
    <string name="prices1">Prices</string>
    <string name="login">Login</string>
    <string name="mail_user">Email or Username</string>
    <string name="or">OR</string>
    <string name="forget_password"><u>Forgot Password</u></string>
    <string name="sign_up">Don’t have an account?<u> Sign Up </u> </string>
    <string name="log_in_facebook">Login with FACEBOOK</string>
    <string name="log_in_twitter">Login with Twitter</string>
    <string name="hint_password"><h1>...</h1></string>
    <string name="title_activity_sign_up">Sign_up</string>
    <string name="name_user">Your Name</string>
    <string name="login_user">Username</string>
    <string name="genre_user">Gender</string>
    <string name="phone_user">Phone (optional)</string>
    <string name="email_user">your@mail.com</string>
    <string name="app_condition">I Agree to Terms of Service.</string>
    <string name="name_salon">Name Your Work</string>
    <string name="type">Work Type</string>
    <string name="service">Services for...</string>
    <string name="since">Since from</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="send">Confirm</string>
    <string name="searsh">Search</string>
    <string name="about">About us</string>
    <string name="contact">Contact us</string>
    <string name="signout">Sign out</string>
    <string name="setting">Settings</string>
    <string name="update_password">Change Password</string>
    <string name="sound_notif">Sound Notifications</string>
    <string name="language">Change Language</string>
    <string name="Currency">Currency</string>
    <string name="maps_search">Maps Search</string>
    <string name="Hidden_Profile">Hidden Profile</string>
    <string name="Block_List">Block List</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="Old_Password">Old Password</string>
    <string name="New_password">New password</string>
    <string name="Password_Confirmation">Password Confirmation</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="hiden">men,women</string>
    <string name="Currency1">SAR</string>
    <string name="zone_map">klm</string>
    <string name="confimation_delete">Are you sure you want to delete  the account?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Dollar">Dollar</string>
    <string name="Euro">Euro</string>
    <string name="contact_us">Contact Us Informations</string>
    <string name="Informations">Contact Us Informations </string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="Your_Mail">Your Mail</string>
    <string name="subject">Subject</string>
    <string name="Send">Send</string>
    <string name="Filter">Filter by</string>
    <string name="Sort">Sort by</string>
    <string name="Search">Search</string>
    <string name="Search_bar">Search...</string>
    <string name="Profiles">Profiles</string>
    <string name="Pictures">Pictures</string>
    <string name="Places">Places</string>
    <string name="man">man</string>
    <string name="women">women</string>
    <string name="sign_up_button">Sign up</string>
    <string name="salon_name">Salon Name</string>
    <string name="promotion_name">Service or Promotion Name</string>
    <string name="user_name">Your Name</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_follow">Following</string>
    <string name="reason_decline">Reason of Decline:</string>
    <string name="loading">Loading...</string>
    <string name="settings">Settings</string>
    <string name="mes1">received reservation at</string>
    <string name="mes2">for</string>
    <string name="mes3">declined reservation at</string>
    <string name="mes4">beause</string>
    <string name="mes5">You have Resrvation at</string>
    <string name="new_res">New Reservation</string>
    <string name="mes6">send reservation at</string>
    <string name="mes7">on</string>
    <string name="mes8">You have Resrvation from</string>
    <string name="Accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="Yes1">Yes</string>
    <string name="mes9">did she</string>
    <string name="mes10">get</string>
    <string name="mes11">you punishable for</string>
    <string name="mess13">because not go to</string>
    <string name="mess12">1 day</string>
    <string name="mess14">you got a</string>
    <string name="mes15">please rate it</string>
    <string name="editprofil">Edit Profile</string>
    <string name="profile_info">Profile information</string>
    <string name="profil_service">Services</string>
    <string name="profil_price">Prices</string>
    <string name="profil_promotion">Promotion</string>
    <string name="changerphoto">Change Photo Profile</string>
    <string name="cover">Add Cover Photo</string>
    <string name="map_location">Select location on Google Map</string>
    <string name="OpenSince">Open Since</string>
    <string name="phone_user1">Phone </string>
    <string name="email_user1">Email </string>
    <string name="worktime">Work Hours</string>
    <string name="payment">Payment Methods</string>
    <string name="adresse">Address</string>
    <string name="Branches">Branches</string>
    <string name="branche_t">Add Other Branches</string>
    <string name="Closed">Closed</string>
    <string name="title_activity_maps">Map</string>
    <string name="write_reason">Please Write Reason</string>
    <string name="unfollow">Unfollow</string>
    <string name="typeSalon">Type</string>
    <string name="location">Location</string>
    <string name="opensince">Open since</string>
    <string name="workhours">Work hours</string>
    <string name="payement">Payment\nMethodes</string>
    <string name="rating">Rating</string>
    <string name="branche">Branch</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="categories">Categories</string>
    <string name="services">Services</string>
    <string name="contains">Contains</string>
    <string name="add">add</string>
    <string name="category_name">category name</string>
    <string name="uploadimage">upload image</string>
    <string name="addcategory">Add new categorie</string>
    <string name="addservice">Add new service</string>
    <string name="service_name">service name</string>
    <string name="category_type">category type</string>
    <string name="addpromotion">Add new promotion</string>
    <string name="promotion1_name">promotion name</string>
    <string name="discount">Discount :</string>
    <string name="typediscount">Type :</string>
    <string name="before">(Before) :</string>
    <string name="Currencytype">Currency Type</string>
    <string name="duration">Service Duration</string>
    <string name="min">min</string>
    <string name="costoumer_duration">Customers / Duration:</string>
    <string name="cancel">Cancel</string>
    <string name="opensetting">Ok</string>
    <string name="nolocation">Pour continuer, autorisez votre appareil à activer la localisation</string>
    <string name="bio">Bio</string>
    <string name="search_1">Search</string>
    <string name="favorite">Favorite</string>
    <string name="why">Why did you cancel the reservation?</string>
    <string name="edit">edit</string>
    <string name="edit1">edit</string>
    <string name="to">to</string>
    <string name="in">in</string>
    <string name="addprice">Add New Prices</string>
    <string name="sercice_name">Service name</string>
    <string name="prompt_request_camara">open location7</string>
    <string name="prompt_we_need_camera">open location</string>
    <string name="Reservation">Reservation</string>
    <string name="delele">cancel</string>
    <string name="Location">Location</string>
    <string name="Bio">Bio</string>
    <string name="From">From</string>
    <string name="open">Open in</string>
    <string name="map">Google Map</string>
    <string name="tryagain">Try again</string>
    <string name="Reservation1">Reservation</string>
    <string name="reason">Reason</string>
    <string name="addComment">Add Comment</string>
    <string name="addc">ADD</string>
    <string name="make_reservation">make reservation at</string>
    <string name="start_follow_profile">started following you</string>
    <string name="toyour">to your</string>
    <string name="ADD">ADD</string>
    <string name="editprofiluser">Edit profil</string>
    <string name="tow">All</string>
    <string name="succes">Your profile has been successfully edited</string>
    <string name="starttime">from : Select the start date</string>
    <string name="enddate">To : Select the expiry date</string>
    <string name="add1">Add</string>
    <string name="service_desc">Service description</string>
    <string name="update">Modify</string>
    <string name="erreur1">Can\'t load page No internet connection.</string>
    <string name="erreur2">Make sure Wi-Fi or cellular data is turned on, then try again.\n Swipe Down to refresh</string>
    <string name="listebloc">The block list is empty</string>
    <string name="serveur_metenance">Server is currently undergoing maintenance. Please try again later.</string>
    <string name="block">Hide</string>
    <string name="share_via">share via</string>
    <string name="salon">SALON</string>
    <string name="start_folow"> Follow </string>
    <string name="notice">Select country first</string>
    <string name="please">Category not found</string>
    <string name="please1">Please insert category to add service</string>
    <string name="anyrevetion">you don\'t have any reservation</string>
    <string name="w_name">Enter your username</string>
    <string name="w_country">Select Country</string>
    <string name="w_since">Enter the opening date</string>
    <string name="w_city">Select City</string>
    <string name="w_mail">Enter your true e-mail address</string>
    <string name="w_password">Enter a password of more than 6 characters</string>
    <string name="w_genre">Enter the gender</string>
    <string name="ok">ok</string>
    <string name="code">Verification code</string>
    <string name="thanksy">Thank you for choosing Salon</string>
    <string name="evailvalid">You will receive an email from the administration to activate your account</string>
    <string name="report">Report</string>
    <string name="report_reason">Report reason</string>
    <string name="all">All</string>
    <string name="user">User</string>
    <string name="salons">Salons</string>
</resources>