<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_dialog"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/old"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/Old_Password"
                android:textColor="#969696"
                android:textColorHint="#969696"
                android:textSize="18dp"

                />

            <EditText
                android:id="@+id/new0"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/New_password"
                android:textColor="#969696"
                android:textColorHint="#969696"
                android:textSize="18dp"

                />

            <EditText
                android:id="@+id/new1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/Password_Confirmation"
                android:textColor="#969696"
                android:textColorHint="#969696"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_colored"
                    android:text="@string/Cancel"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_colored"
                    android:text="@string/OK"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>