<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context="salon.octadevtn.sa.salon.Contact_US">

    <LinearLayout
        android:id="@+id/contenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/contact_us"-->
            <!--android:textColor="#646464"-->
            <!--android:textSize="16dp"-->
            <!--android:textStyle="bold" />-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/content"-->
            <!--android:textSize="14dp" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Informations"
            android:textColor="#646464"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/background_edit_text3"
            android:minWidth="200dp" />

        />

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_edit_text3"
            android:hint="@string/Your_Mail"
            android:maxLines="1"
            android:minWidth="150dp"
            android:padding="10dp"
            android:textColorHint="#969696" />

        <MultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_edit_text3"
            android:hint="@string/subject"
            android:maxLines="10"
            android:minHeight="90dp"
            android:padding="10dp"
            android:textColorHint="#969696" />
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/contenu"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_colored"
        android:text="@string/Send"
        android:textColor="@android:color/white" />
</RelativeLayout>
