<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="salon.octadevtn.sa.salon.Login_signup.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.85"
        android:background="#fff" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="35dp">

        <EditText
            android:id="@+id/old"
            style="@style/TextViewStyle"
            android:layout_width="@dimen/width_scren"
            android:layout_height="@dimen/height_textview"
            android:background="@drawable/background_edit_text"
            android:gravity="left|center"
            android:hint="@string/code" />

        <EditText
            android:id="@+id/new0"
            style="@style/TextViewStyle"
            android:layout_width="@dimen/width_scren"
            android:layout_height="@dimen/height_textview"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/New_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/new1"
            style="@style/TextViewStyle"
            android:layout_width="@dimen/width_scren"
            android:layout_height="@dimen/height_textview"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/Password_Confirmation"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/button_colored"
                android:text="@string/Cancel"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/send"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/button_colored"
                android:text="@string/OK"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/arrowl" />
    </LinearLayout>
</RelativeLayout>
