<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="20dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/man"
                style="@style/TextViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/report" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/report"
                style="@style/TextViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/report_reason"
                android:padding="5dp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_colored"
                    android:text="@string/send"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_colored"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>