<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="20dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/thanksy"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/evailvalid"
            android:textColor="@color/colorBlack"
            android:textSize="14dp" />

        <Button
            android:id="@+id/ok"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_below="@+id/content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@color/blue_btn_bg_color"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
