<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_dialog"

            android:orientation="vertical">

            <TextView
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/confimation_delete"
                android:textColor="#969696"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/delete_no"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_colored"
                    android:maxWidth="100dp"
                    android:text="@string/No"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/delete_ok"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_colored"
                    android:maxWidth="100dp"
                    android:text="@string/Yes"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>